test/tests/operators/parallel/error_source_bytes.txt
error: this operator was not ported yet
 --> tests/operators/parallel/error_source_bytes.tql:5:14
  |
5 | parallel 2 { load_file "/dev/null" }
  |              ^^^^^^^^^ 
  |
